Implemented Project Using ts and improved Folder Structure

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,6 @@
     <a href="https://github.com/hashir4560">Hashir Raja</a>
   </footer>
 
-  <script src='sandbox.js'></script>
+  <script src='app.js'></script>
 </body>
 </html>
