Implemented Interfaces For A Small Project

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TypeScript Tutorial</title>
+  <title>Finance Logger </title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -40,9 +40,9 @@
       <button>Add</button>
     </form>
 
-    <a href="https://github.com/hashir4560">Hashir Raja</a>
+    <a href="https://github.com/hashir4560">Raja Hashir</a>
   </footer>
 
-  <script src='app.js'></script>
+  <script type="module" src='app.js'></script>
 </body>
 </html>
